@@ -1,3 +1,8 @@
+2013-12-19  Monk Chiang  <sh.chiang04@gmail.com>
+
+	* common/config/nds32/nds32-common.c (TARGET_DEFAULT_TARGET_FLAGS):
+	Consider TARGET_CPU_DEFAULT settings.
+
 2013-12-18  James Greenhalgh  <james.greenhalgh@arm.com>
 
 	* config/aarch64/aarch64-cores.def: Add support for
